Created new view at root path, 'home/index' with Foundation styles.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "fizzbuzz-heroes",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "graceful-fs": "^4.1.11"
+  }
 }
